log

> electron-quick-start@1.0.0 start D:\electron-quick-start
> electron .


App threw an error during load
D:\electron-quick-start\main.js:10
import * from 'vtk'
^^^^^^
SyntaxError: Unexpected token import
    at Object.exports.runInThisContext (vm.js:76:16)
    at Module._compile (module.js:528:28)
    at Object.Module._extensions..js (module.js:565:10)
    at Module.load (module.js:473:32)
    at tryModuleLoad (module.js:432:12)
    at Function.Module._load (module.js:424:3)
    at loadApplicationPackage (D:\electron-quick-start\node_modules\electron\dist\resources\default_app.asar\main.js:288:12)
    at Object.<anonymous> (D:\electron-quick-start\node_modules\electron\dist\resources\default_app.asar\main.js:330:5)
    at Module._compile (module.js:556:32)
    at Object.Module._extensions..js (module.js:565:10)
Terminate batch job (Y/N)? 
